[project]
name = "flakebench"
version = "0.1.0"
description = "Performance benchmarking tool for Snowflake (Standard, Hybrid, Interactive Tables) and Postgres - 3DMark for databases"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "snowflake-connector-python>=3.7.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "pyyaml>=6.0.1",
    "psutil>=7.2.1",
    "pytailwindcss>=0.3.0",
    "pyarrow>=14.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
